@@ -1,3 +1,8 @@
+1999-07-25  Rosanna Yuen  <rwsy@mit.edu>
+
+	* eagle_wing.scm (complete-transaction): fixed the status bar
+	message discrepancy in this game.
+
 1999-07-23  Rosanna Yuen  <rwsy@mit.edu>
 
 	* kansas.scm (empty-tableau?): makes sure that no cards can be
